# u8086

./: .gitignore  8086_default.chai  CMakeLists.txt  README.md
bios/: Makefile  bios.asm  linker.ld
src/: CMakeLists.txt  config.h.in  disassembler_8086.h  u8086.cpp
